--- a/Facilis.UsersManagement/Facilis.UsersManagement.SampleApp/Views/Shared/_Layout.cshtml
+++ b/Facilis.UsersManagement/Facilis.UsersManagement.SampleApp/Views/Shared/_Layout.cshtml
@@ -10,6 +10,21 @@
 </head>
 
 <body x-data="{isLoading: false}">
+    @if (this.Context.User.Identity?.IsAuthenticated == true)
+    {
+        <div class="position-fixed top-0 start-0 w-100">
+            <div class="p-3">
+                <div class="card p-2">
+                    <div class="d-flex justify-content-end">
+                        <a href="~/sign-out" class="btn btn-danger">
+                            Logout
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    }
+
     <div>
         @RenderBody()
     </div>
