bound the admin info and the user's info to the sample app views

--- a/Facilis.UsersManagement/Facilis.UsersManagement.SampleApp/Views/Home/SignIn.cshtml
+++ b/Facilis.UsersManagement/Facilis.UsersManagement.SampleApp/Views/Home/SignIn.cshtml
@@ -32,6 +32,11 @@
 
             <div>
                 <div>
+                    Admin Username:
+                    <code>@DbContextHelper.ADMIN.ToLower()</code>
+                </div>
+                
+                <div>
                     Username:
                     <code>@DbContextHelper.USERNAME.ToLower()</code>
                 </div>
