--- a/Facilis.UsersManagement/Facilis.UsersManagement.SampleApp/Views/Shared/_Layout.cshtml
+++ b/Facilis.UsersManagement/Facilis.UsersManagement.SampleApp/Views/Shared/_Layout.cshtml
@@ -1,4 +1,16 @@
-﻿<!DOCTYPE html>
+﻿@using System.Security.Claims
+@using Facilis.UsersManagement.SampleApp.Enums
+@{
+    var roles = this.Context.User.Identity?.IsAuthenticated == true ?
+        this.Context.User.Claims
+            .Where(claim => claim.Type == ClaimTypes.Role)
+            .Select(claim => claim.Value)
+            .ToArray() : Array.Empty<string>();
+    var isAdmin = this.Context.User.Identity?.IsAuthenticated == true ?
+        this.Context.User.IsInRole(nameof(RoleTypes.Administrator)) : false;
+}
+
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -15,7 +27,12 @@
         <div class="position-fixed top-0 start-0 w-100">
             <div class="p-3">
                 <div class="card p-2">
-                    <div class="d-flex justify-content-end">
+                    <div class="d-flex justify-content-between">
+                        <div class="d-flex align-items-center">
+                            @(string.Join(", ", roles)),
+                            Is Admin: @isAdmin
+                        </div>
+
                         <a href="~/sign-out" class="btn btn-danger">
                             Logout
                         </a>
