--- a/Facilis.UsersManagement/Facilis.UsersManagement.SampleApp/Views/Shared/_Scripts.cshtml
+++ b/Facilis.UsersManagement/Facilis.UsersManagement.SampleApp/Views/Shared/_Scripts.cshtml
@@ -4,3 +4,21 @@
         referrerpolicy="no-referrer"></script>
 <script src="https://unpkg.com/@@alpinejs/collapse@3.x.x/dist/cdn.min.js"></script>
 <script src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
+
+<script type="text/javascript">
+    const cssLoader = (() => {
+        const defaultDelay = 250;
+
+        return {
+            show: (delay) => {
+                return new Promise((resolve) => {
+                    that.isLoading = true;
+                    setTimeout(resolve, delay || defaultDelay);
+                });
+            },
+            hide: () => that.isLoading = false,
+        };
+    })();
+
+    let that;
+</script>
