created the users cshtml view for admin to list all the user with edit button

--- a/Facilis.UsersManagement/Facilis.UsersManagement.SampleApp/Views/Home/Index.cshtml
+++ b/Facilis.UsersManagement/Facilis.UsersManagement.SampleApp/Views/Home/Index.cshtml
@@ -10,5 +10,9 @@
         {
             <partial name="_UserEditForm" />
         }
+        else
+        {
+            <partial name="_Users" />
+        }
     </div>
 </div>
