--- a/Facilis.UsersManagement/Facilis.UsersManagement.SampleApp/Views/Shared/_UserPanel.cshtml
+++ b/Facilis.UsersManagement/Facilis.UsersManagement.SampleApp/Views/Shared/_UserPanel.cshtml
@@ -13,6 +13,7 @@
 <div class="card p-2">
     <div class="d-flex justify-content-between">
         <div class="d-flex align-items-center">
+            Roles:
             @(string.Join(", ", roles)),
             Is Admin: @isAdmin
         </div>
