applied the updated user interface's changes to the sample app project

--- a/Facilis.UsersManagement/Facilis.UsersManagement.SampleApp/Views/Home/_UserEditForm.cshtml
+++ b/Facilis.UsersManagement/Facilis.UsersManagement.SampleApp/Views/Home/_UserEditForm.cshtml
@@ -4,7 +4,7 @@
 
 @{
     var isAdmin = this.Context.User.IsInRole(nameof(RoleTypes.Administrator));
-    var profile = Model.GetProfile<UserProfile>();
+    var profile = Model.Profile;
     var data = new
     {
         Model.Id,
