--- a/Facilis.UsersManagement/Facilis.UsersManagement.SampleApp/Views/Home/Index.cshtml
+++ b/Facilis.UsersManagement/Facilis.UsersManagement.SampleApp/Views/Home/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@using Facilis.UsersManagement.SampleApp.Enums
+﻿@using Facilis.UsersManagement.Helpers
+@using Facilis.UsersManagement.SampleApp.Enums
 
 <div class="d-flex flex-column vh-100 py-3">
     <div class="pb-3 px-3">
@@ -6,7 +7,7 @@
     </div>
 
     <div class="flex-grow-1 px-3">
-        @if (!this.Context.User.IsInRole(nameof(RoleTypes.Administrator)))
+        @if (!this.Context.User.IsInRole(RoleTypes.Administrator))
         {
             <partial name="_UserEditForm" />
         }
