--- a/Facilis.UsersManagement/Facilis.UsersManagement.SampleApp/Views/Home/_Users.cshtml
+++ b/Facilis.UsersManagement/Facilis.UsersManagement.SampleApp/Views/Home/_Users.cshtml
@@ -32,6 +32,15 @@
                 </thead>
 
                 <tbody>
+                    <tr>
+                        <td align="center" colspan="6">
+                            <a class="d-block btn btn-outline-danger"
+                               href="~/users">
+                                <i class="fa-solid fa-plus"></i>
+                            </a>
+                        </td>
+                    </tr>
+
                     <template x-for="user in users">
                         <tr>
                             <td align="center">
