--- a/Facilis.UsersManagement/Facilis.UsersManagement.SampleApp/Views/Home/SignIn.cshtml
+++ b/Facilis.UsersManagement/Facilis.UsersManagement.SampleApp/Views/Home/SignIn.cshtml
@@ -1,6 +1,7 @@
 ﻿@using Facilis.UsersManagement.SampleApp.Helpers
 
-<div class="vh-100 d-flex align-items-center justify-content-center">
+<div class="vh-100 d-flex align-items-center justify-content-center"
+     x-init="that = $data">
     <div class="card p-4">
         <div class="mb-3">
             <h1 class="fs-3">Facilis Users Management</h1>
@@ -59,7 +60,9 @@
                 </div>
             }
 
-            <div class="d-flex justify-content-end">
+            <div class="d-flex justify-content-between">
+                <a href="~/sign-in/otp" class="btn btn-secondary">Use token</a>
+
                 <button type="submit" class="btn btn-primary">Login</button>
             </div>
         </form>
