hidden the token id input from the sign in with token view

--- a/Facilis.UsersManagement/Facilis.UsersManagement.SampleApp/Views/Home/SignInWithToken.cshtml
+++ b/Facilis.UsersManagement/Facilis.UsersManagement.SampleApp/Views/Home/SignInWithToken.cshtml
@@ -32,7 +32,7 @@
         </div>
 
         <form method="post">
-            <input name="tokenId" x-model="tokenId" />
+            <input name="tokenId" hidden x-model="tokenId" />
 
             <div class="mb-3">
                 <div class="form-group mb-2">
