--- a/Facilis.UsersManagement/Facilis.UsersManagement.SampleApp/Views/Home/SignIn.cshtml
+++ b/Facilis.UsersManagement/Facilis.UsersManagement.SampleApp/Views/Home/SignIn.cshtml
@@ -66,5 +66,7 @@
                 <button type="submit" class="btn btn-primary">Login</button>
             </div>
         </form>
+
+        <partial name="_FirebaseAuth" />
     </div>
 </div>
