implemented the sign-in with firebase action point in the sample app

--- a/Facilis.UsersManagement/Facilis.UsersManagement.SampleApp/Views/Home/_FirebaseAuth.cshtml
+++ b/Facilis.UsersManagement/Facilis.UsersManagement.SampleApp/Views/Home/_FirebaseAuth.cshtml
@@ -4,6 +4,7 @@
 <script type="text/javascript">
     const watchFirebase = () => {
         thatFirebase.$watch('accessToken', () => {
+            cssLoader.show();
             document.getElementById('firebase-form').submit();
         });
     };
